dfir_rs/tests/compile-fail-stable/surface_singleton_badexpr.stderr
error: `persist` should have exactly 1 persistence lifetime arguments, actually has 0.
 --> tests/compile-fail-stable/surface_singleton_badexpr.rs:6:16
  |
6 |             -> persist()
  |                ^^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_singleton_badexpr.rs:11:8
   |
11 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
